<resources>
    <!--
        App strings:
     -->
    <string name="app_name">TrackMyMeds</string>
    <string name="app_title">Track My\nMeds</string>

    <!--
        Activity titles:
     -->
    <string name="activity_title_splash">Welcome to TrackMyMeds</string>
    <string name="activity_title_login">Login:</string>
    <string name="activity_title_register">Create An Account:</string>
    <string name="activity_title_schedule">Medication Schedule:</string>
    <string name="activity_title_med_list">Medication List:</string>
    <string name="activity_title_add_medication">Add Medication:</string>
    <string name="activity_title_delete_account">Delete Account:</string>
    <string name="activity_title_view_schedule">View Medication Schedule:</string>
    <string name="activity_title_view_schedule_item">View Medication Schedule Item:</string>

    <!--
        Errors:
     -->
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_no_internet">Could not connect to the internet.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_value_undefined">UNDEFINED</string>

    <!--
        Activity specfic strings:
    -->

    <!-- Login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">Login</string>

    <!-- Register activity -->
    <string name="label_personal_details">Personal Details:</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Password:</string>
    <string name="prompt_email2">Re-Enter Email</string>
    <string name="prompt_password2">Re-Enter Password</string>
    <string name="prompt_yob">Year of Birth</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_tablet_count">Tablets To Take</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_medication_history">Medication History</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_login_fb">Login With Facebook</string>
    <string name="button_register">Create Account</string>

    <!-- Med list -->
    <string name="label_no_results">No results found.</string>
    <string name="label_search_guide">Tap the magnifying glass icon to search for medicine by brand name.\n\nYou can also tap the letter icon in the top-right to see all medication brands sorted by their starting letter.</string>
    <string name="button_add_medication">Add Medication</string>
    <string name="button_edit_medication">Save Changes</string>

    <!-- Add medication -->
    <string name="label_brand_details">Brand Details:</string>
    <string name="label_product_details">Product Details:</string>
    <string name="label_set_timing">Set Timing:</string>
    <string name="label_set_details">Set Details:</string>
    <string name="label_recurring">Recurring:</string>
    <string name="label_brand_name">Brand Name:</string>
    <string name="label_products">Select a Product:</string>
    <string name="label_date">Start Date:</string>
    <string name="label_time">Start Time:</string>
    <string name="label_repeat">Repeats:</string>
    <string name="label_repeat_custom">Day Interval:</string>
    <string name="label_items_to_take">Items to Take:</string>
    <string name="label_items_remaining">Items Remaining:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="prompt_time">Example: 17:30</string>
    <string name="prompt_date">Example: 2017-08-20</string>
    <string name="prompt_repeat_custom">Example: 3</string>
    <string name="prompt_items_to_take">Example: 1</string>
    <string name="prompt_items_remaining">Example: 3</string>
    <string name="prompt_nickname">Example: Heart Medication</string>

    <!-- View schedule/item -->
    <string name="label_product_description">Product Description:</string>

    <!-- View schedule item -->
    <string name="label_schedule_item_details">SCHEDULE ITEM DETAILS UNDEFINED</string>
    <string name="button_take_medication">Take</string>
    <string name="button_untake_medication">Undo Take</string>

    <!--
        Options:
    -->

    <!-- Repeat spinner -->
    <string-array name="options_repeat">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Custom</item>
    </string-array>

    <!-- Brands -->
    <string-array name="options_brands">
        <item>Brand 1</item>
        <item>Brand 2</item>
        <item>Brand 3</item>
        <item>Brand 4</item>
    </string-array>

    <!-- Product spinner -->
    <string-array name="options_products">
        <item>Medicine 1</item>
        <item>Medicine 2</item>
        <item>Medicine 3</item>
        <item>Medicine 4</item>
    </string-array>

    <!-- Time options -->
    <string-array name="options_time_ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <!--
        Menu action strings:
     -->

    <!-- Schedule menu actions -->
    <string name="menu_action_delete_account">Delete Account</string>
    <string name="menu_action_change_account">Change Account</string>
    <string name="menu_action_delete_medication">Delete Medication</string>

    <!-- Medication list -->
    <string name="prompt_medication_search">Enter brand name</string>

    <!--
        Dialog strings:
    -->

    <!-- Delete account -->
    <string name="dialog_delete_account_warning">If you delete your account all history and linking of the account will be removed.\n\nAre you sure you want to delete?</string>

    <!-- Delete medication schedule -->
    <string name="dialog_confirm_delete_medication_title">Delete Medication Schedule</string>
    <string name="dialog_confirm_delete_medication_prompt">Are you sure you want to delete this medication schedule?</string>
    <string name="dialog_confirm_delete_medication_yes">Yes</string>
    <string name="dialog_confirm_delete_medication_cancel">Cancel</string>

</resources>