<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/add_medication_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context="com.app.trackmymeds.AddMedicationActivity">
    <!-- Last line is a hack to prevent immediate text edit focus -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_medication_toolbar"
        style="@style/tmmToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:popupTheme="@style/tmmToolbar"
        app:theme="@style/tmmToolbar"
        tools:ignore="UnusedAttribute"/>

    <ProgressBar
        android:id="@+id/add_medication_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.64"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/add_medication_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_medication_label_brand_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_brand_details"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_medication_label_brand_name"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_brand_name"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/add_medication_value_brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <TextView
                android:id="@+id/medication_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_product_details"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/add_medication_label_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_products"
                android:textColor="@android:color/white"/>

            <Spinner
                android:id="@+id/add_medication_spinner_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_products"/>

            <TextView
                android:id="@+id/add_medication_label_set_timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_set_timing"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/add_medicartion_label_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_time"
                android:textColor="@android:color/white"/>

            <android.support.design.widget.TextInputLayout
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.96">

                <EditText
                    android:id="@+id/add_medication_edit_text_time"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_time"
                    android:inputType="time"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_medication_label_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_date"
                android:textColor="@android:color/white"/>

            <android.support.design.widget.TextInputLayout
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/add_medication_edit_text_date"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_date"
                    android:inputType="date"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_medication_label_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_repeat"
                android:textColor="@android:color/white"/>

            <Spinner
                android:id="@+id/add_medication_spinner_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_repeat"
                />

            <TextView
                android:id="@+id/add_medication_label_repeat_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_repeat_custom"
                android:textColor="@android:color/white"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_medication_text_layout_repeat_custom"
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <EditText
                    android:id="@+id/add_medication_edit_text_repeat_custom"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_repeat_custom"
                    android:inputType="date"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_medication_label_set_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0.96"
                android:text="@string/label_set_details"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/add_medication_label_items_to_take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_items_to_take"
                android:textColor="@android:color/white"/>

            <android.support.design.widget.TextInputLayout
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/add_medication_edit_text_items_to_take"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_items_to_take"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_medication_label_items_remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_items_remaining"
                android:textColor="@android:color/white"/>

            <android.support.design.widget.TextInputLayout
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/add_medication_edit_text_to_remaining"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_items_remaining"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_medication_label_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_nickname"
                android:textColor="@android:color/white"/>

            <android.support.design.widget.TextInputLayout
                style="@style/tmmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/add_medication_edit_text_nickname"
                    style="@style/tmmTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_nickname"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_medication_button_add_medication"
                style="@style/tmmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add_medication"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
